[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/states/state_machine.gd" type="Script" id=1]
[ext_resource path="res://assets/blue_witch/B_witch_take_damage.png" type="Texture" id=2]
[ext_resource path="res://src/states/enemy_idle.gd" type="Script" id=3]
[ext_resource path="res://assets/blue_witch/B_witch_idle.png" type="Texture" id=4]
[ext_resource path="res://src/enemy/enemy.gd" type="Script" id=5]
[ext_resource path="res://src/states/take_damage.gd" type="Script" id=6]
[ext_resource path="res://assets/enemy_bar.png" type="Texture" id=7]
[ext_resource path="res://assets/enemy_bar_progress.png" type="Texture" id=8]
[ext_resource path="res://src/enemy/enemy_healthbar.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
height = 4.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "take_damage",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=12]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 5 )
health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="EnemyPosition" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="EnemyPosition"]
frames = SubResource( 11 )
animation = "idle"
frame = 3
playing = true

[node name="Hurtbox" type="Area2D" parent="EnemyPosition"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPosition/Hurtbox"]
shape = SubResource( 12 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="take_damage" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="StateMachine/take_damage"]
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
margin_left = 15.0
margin_top = -21.0
margin_right = 55.0
margin_bottom = -13.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
script = ExtResource( 9 )

[connection signal="area_entered" from="EnemyPosition/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="StateMachine/take_damage/Timer" to="StateMachine/take_damage" method="_on_Timer_timeout"]
